# Sage

./: .gitignore  CMakeLists.txt  readme.md
.github/workflows/: sage_tests.yml
docs/: argparse.md  channel.md  performance.md  string_utilities.md  terminal.md  thread.md
examples/: CMakeLists.txt
examples/argparse/: CMakeLists.txt  argparse_example.cpp
examples/channel/: CMakeLists.txt  channel_example.cpp
examples/term/: CMakeLists.txt  term_colours_example.cpp
sage/: CMakeLists.txt
sage/include/: sage.hpp
sage/include/sage/argparse/: argparse.hpp
sage/include/sage/channel/: channel.hpp
sage/include/sage/performance/: monitors.hpp  timer.hpp  timer_monitor.hpp
sage/include/sage/string/: utilities.hpp
sage/include/sage/term/: colours.hpp  cursor.hpp
sage/include/sage/thread/: pool.hpp
test_sage/: CMakeLists.txt
test_sage/test_argparse/: argument_tests.cpp  basic_tests.cpp  cascading_input_tests.cpp  common.hpp  common_setup.hpp  config_file_tests.cpp  default_argument_tests.cpp  environment_variable_tests.cpp  nargs_tests.cpp  validation_tests.cpp
test_sage/test_argparse/test_config_files/: invalid_config.cfg  optional_arg_config_file.cfg  simple_config_file.cfg  single_value_config_file.cfg
test_sage/test_performance/: monitors_tests.cpp
test_sage/test_string/: case.cpp  conversions.cpp  endswith.cpp  join.cpp  replace.cpp  split.cpp  startswith.cpp  trim.cpp
